New version of Readme.
The portion that ties in your new scripts has not been added.